--- a/Source/plugin.yml
+++ b/Source/plugin.yml
@@ -1,7 +1,24 @@
 name: ShowInfo
 main: ShowInfo\ShowInfo
 prefix: "§eShowInfo"
-version: "1.0"
-api: [1.12.0, 1.13.0, 2.0.0]
+version: "1.1"
+api: [1.13.0, 2.0.0]
 author: DeBe
 load: StartUp
+
+commands:
+  showinfo:
+    permission: showinfo.cmd
+    description: <On|Type|Push|Reload|Reset>
+    usage: /ShowInfo <On|Type|Push|Reload|Reset>
+
+permissions:
+  showinfo.cmd.*:
+    default: op
+    children:
+     showinfo.cmd.on:
+     showinfo.cmd.type:
+     showinfo.cmd.push:
+     showinfo.cmd.reload:
+     showinfo.cmd.reset:
+       default: console
