--- a/Source/plugin.yml
+++ b/Source/plugin.yml
@@ -1,10 +1,10 @@
 name: ShowInfo
 main: ShowInfo\ShowInfo
 prefix: "§eShowInfo"
-version: "1.1"
+version: "1.2"
 api: [1.13.0, 2.0.0]
 author: DeBe
-load: StartUp
+load: PostWorld
 
 commands:
   showinfo:
