Remove Color in plugin prefix

--- a/Source/plugin.yml
+++ b/Source/plugin.yml
@@ -1,6 +1,6 @@
 name: ShowInfo
 main: ShowInfo\ShowInfo
-prefix: "§eShowInfo"
+prefix: "ShowInfo"
 version: "1.4"
 api: [1.13.0, 2.0.0]
 author: DeBe
